Added first attempt at "MaxFeeTxHandler", failed 1/3 cases (naiive approach of sorting by output value didn't get max possible output combinations)

--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="src" path="scrooge_coin/ext/keskival/test"/>
 	<classpathentry kind="src" path="scrooge_coin/ext/keskival/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="coursera_bitcoin-master/assignment_1/grading/rsa.jar"/>
+	<classpathentry kind="lib" path="coursera_bitcoin-master/assignment_1/grading/scroogeCoinGrader.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
